--- a/resources /css/style.css
+++ b/resources /css/style.css
@@ -22,7 +22,7 @@ html {
 header {
     background: linear-gradient(rgba(70, 70, 70, 0.45),rgba(64, 63, 63, 0.6)) , url(images/headerBackGroundImage.jpg);
     background-size:cover;
-    background-position: top;
+    background-position: center;
     background-attachment: fixed;
     height: 100vh;
 }
@@ -38,7 +38,8 @@ header {
     font-weight: 300;
     text-transform: uppercase;
     letter-spacing: 2px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+    text-align: center;
 }
 .clearfix {zoom: 1}
 .clearfix:after {
@@ -87,12 +88,22 @@ header {
     border-bottom: 2px solid #bea146;
 }
 /*///////////////////////BUTTONS/////////////////////////////////*/
+.mainTextButtons{
+    text-align: center;
+}
+.buttonNaruto{
+    float: left;
+    margin-left:25px;
+}
+.buttonSasuke{
+    float:right;
+    margin-right: 25px;
+}
 .button {
     color:#fff;
     text-decoration: none;
     padding:10px 40px;
     display: inline-block;
-    margin-right:20px;
     transition: background-color 0.4s, color 0.4s;
 }
 .buttonFull:link,
